--- a/app/components/reading/readingView.html
+++ b/app/components/reading/readingView.html
@@ -22,4 +22,4 @@
     </div>
 </section>
 <div class="progression" ng-show="!loading">{{(currentQuestion)}}/{{totalQuestions}}</div>
-<footer ng-stats></footer>
+<footer ng-score></footer>
