--- a/app/components/writing/writingView.html
+++ b/app/components/writing/writingView.html
@@ -29,4 +29,4 @@
     </div>
 </section>
 <div class="progression" ng-show="!loading">{{(currentQuestion)}}/{{totalQuestions}}</div>
-<footer ng-stats></footer>
+<footer ng-score></footer>
