--- a/assets/css/statistics.css
+++ b/assets/css/statistics.css
@@ -18,7 +18,7 @@
 }
 
 .statistics-container .kanji-progression td.prog-value span{
-    color: #00F1FF;
+    color: #A2FAFF;
 }
 
 .statistics-container .kanji-progression td.prog-value div.empty{
