--- a/assets/css/statistics.css
+++ b/assets/css/statistics.css
@@ -7,7 +7,7 @@
     width: 20%;
 }
 
-.statistics-container .kanji-progression td.prog-value div{
+.statistics-container .kanji-progression td.prog-value .bar{
     width: 30%;
     height: 10%;
     position: relative;
@@ -15,15 +15,47 @@
     margin: 0px;
     padding: 0px;
     display: inline-block;
+    background: #ACD8E5;
 }
 
 .statistics-container .kanji-progression td.prog-value span{
     color: #A2FAFF;
+    opacity: 0;
+    animation: fadeIn 0.5s linear forwards;
+    -webkit-animation: fadeIn 0.5s linear forwards;
+    -moz-animation: fadeIn 0.5s linear forwards;
+    -o-animation: fadeIn 0.5s linear forwards;
+    -ms-animation: fadeIn 0.5s linear forwards;
+    animation-delay: 3s;
+    -webkit-animation-delay: 3s;
+    -moz-animation-delay: 3s;
+    -o-animation-delay: 3s;
+    -ms-animation-delay: 3s;
 }
 
-.statistics-container .kanji-progression td.prog-value div.empty{
-    background: #ACD8E5;
-}
-.statistics-container .kanji-progression td.prog-value div.filled{
+.statistics-container .kanji-progression td.prog-value .bar div.filled{
+    width: 0%;
+    height: 100%;
+    margin: 0px;
     background: #00F1FF;
+    animation: filling 1s linear forwards;
+    -webkit-animation: filling 1s linear forwards;
+    -moz-animation: filling 1s linear forwards;
+    -o-animation: filling 1s linear forwards;
+    -ms-animation: filling 1s linear forwards;
+}
+
+.statistics-container .kanji-progression td.prog-value .bar:nth-child(2) div.filled{
+    animation-delay: 1s;
+    -webkit-animation-delay: 1s;
+    -moz-animation-delay: 1s;
+    -o-animation-delay: 1s;
+    -ms-animation-delay: 1s;
+}
+.statistics-container .kanji-progression td.prog-value .bar:nth-child(3) div.filled{
+    animation-delay: 2s;
+    -webkit-animation-delay: 2s;
+    -moz-animation-delay: 2s;
+    -o-animation-delay: 2s;
+    -ms-animation-delay: 2s;
 }
