--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -103,6 +103,8 @@ html, .main-view{
     width: 100px;
     height: 100px;
     margin: auto;
+    margin-top: 30px;
+    margin-bottom: 30px;
 }
 
 .loading img{
