--- a/app/components/insert/insertView.html
+++ b/app/components/insert/insertView.html
@@ -1,6 +1,6 @@
 <header ng-top-bar title="Insert" with-back="menu"></header>
 <section class='main-container'>
-    <form class='insert-container'>
+    <form class='insert-container' ng-submit='submit()'>
         <input type='text' ng-model='searchName' placeholder='Reading to search'/><button type='button' ng-click='edit()' class='edit'>Edit</button>
         <br><br>
         <div class='readings' ng-repeat='reading in readings'>
@@ -14,6 +14,6 @@
         </div>
         <br>
         <button type='button' ng-click='addReading()'>+</button>
-        <button type='submit' ng-click='submit()'>Submit</button>
+        <button type='submit'>Submit</button>
     </form>
 </section>
