--- a/app/components/results/resultsView.html
+++ b/app/components/results/resultsView.html
@@ -5,8 +5,9 @@
         <div class='percentage'>{{results.percentage}}%</div>
         <div class='options'>
             <button ng-if='results.incorrects.length!=0' type='button' ng-click='retryFailedKanjis()'>Retry failed kanji</button>
-            <button type='button' ng-click='retry()'>Try again</button>
-            <button type='button' ng-click='back()'>New exercice</button>
+            <button type='button' ng-click="retry()">Try again</button>
+            <button type='button' ng-click="goTo('picker')">New exercice</button>
+            <button type='button' ng-click="goTo('menu')">Menu</button>
         </div>
         
         <table class='kanji-progression'>
