--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -89,7 +89,7 @@ html, .main-view{
     margin: auto;
     cursor: pointer;
     border-radius: 10px;
-    background-color: #008F90;
+    background-color: #478A90;
     color: white;
     margin-top: 30px;
     margin-bottom: 30px;
@@ -300,8 +300,9 @@ table tr:nth-child(odd){
         display: block;
         margin: auto;
         width: 90%;
-        height: 150px;
-        line-height: 150px;
+        height: 100px;
+        line-height: 100px;
+        font-size: 30px;
         margin-bottom: 10px;
     }
     
