--- a/assets/css/picker.css
+++ b/assets/css/picker.css
@@ -71,15 +71,15 @@
     height: 100%;
     text-align: center;
     color: white;
-    background: #4ABAC7;
+    background-color: #4ABAC7;
     cursor: pointer;
     border-radius: 5px;
     font-size: 20px;
 }
 
 .picker-container .system input[type="radio"]:checked + .radio-label{ 
-    background: #2c7a83;
-} 
+    background-color: #2c7a83;
+}
 
 .picker-container .category{
     display: inline-block;
@@ -106,15 +106,24 @@
     height: 100%;
     text-align: center;
     color: white;
-    background: #40C4AE;
+    background-color: #40C4AE;
     font-size: 20px;
     cursor: pointer;
     border-radius: 5px;
+    background-position: 50% 50%;
 }
 
 .picker-container .category input[type="radio"]:checked + .radio-label{ 
-    background: #2e8878;
-} 
+    background-color: #2d8476;
+}
+
+.picker-container .system .hiragana{background-image: url('../img/hiragana.png'); background-repeat: no-repeat;}
+.picker-container .system .romaji{background-image: url('../img/romaji.png'); background-repeat: no-repeat;background-position: right -10%;}
+.picker-container .category .numbers{background-image: url('../img/numbers.png');}
+.picker-container .category .food{background-image: url('../img/food.png');}
+.picker-container .category .fav{background-image: url('../img/favorites.png'); background-size: contain; background-repeat: no-repeat;}
+.picker-container .category .lvl{background-image: url('../img/levels.png'); background-repeat: no-repeat;}
+.picker-container .category .locations{background-image: url('../img/locations.png'); background-size: cover; background-repeat: no-repeat; background-position: left middle;}
 
 .picker-container .nb-question{
     display: inline-block;
@@ -160,12 +169,14 @@
     
     .picker-container .type,
     .picker-container .category,
-    .picker-container .nb-question{
+    .picker-container .nb-question,
+    .picker-container .system{
         display: block;
         margin: auto;
         width: 90%;
         margin-bottom: 10px;
     }
+
 }
 
 
