Added english meaning exercice

--- a/app/components/menu/menuView.html
+++ b/app/components/menu/menuView.html
@@ -10,6 +10,7 @@
             <div ng-show="!loading">
             <p class='you-know-readings'>You can read <span class='known-readings odometer'></span> kanjis ({{readings.length-knownReadings}} to go).</p>
             <p class='you-know-writings'>You can write <span class='known-writings odometer'></span> kanjis ({{readings.length-knownWritings}} to go).</p>
+            <p class='you-know-meanings'>You understand <span class='known-meanings odometer'></span> kanjis ({{readings.length-knownMeanings}} to go).</p>
             <div class='your-rank'>Your rank: <span class='user-rank'>{{rankName}}</span></div>
         </div>
         
