--- a/app/components/insert/insertView.html
+++ b/app/components/insert/insertView.html
@@ -7,6 +7,9 @@
             <input type='text' ng-model='reading.name' placeholder='起きる' required/>
             <input type='text' ng-model='reading.hiragana' placeholder='おきる' required/>
             <input type='text' ng-model='reading.romaji' placeholder='okiru' required/>
+            <input type='text' ng-model='reading.meaning' placeholder='To wake up' required/>
+            <input type='text' ng-model='reading.example' placeholder='朝に起きる。' required/>
+            <br />
             <div class='categories' ng-repeat="readingCat in reading.categories track by $index">
                 <select ng-model="reading.categories[$index]" ng-options="category.id as category.desc for category in categories"></select>
             </div>
