--- a/assets/css/exercice.css
+++ b/assets/css/exercice.css
@@ -275,6 +275,10 @@ span.green-text{
 
 @media screen and (max-width: 800px) {
     
+    .main-container{
+        margin-top: 100px;
+    }
+    
     .question-container, 
     .results-container{
         margin-top: 0px;
