--- a/app/components/statistics/statisticsView.html
+++ b/app/components/statistics/statisticsView.html
@@ -1,4 +1,4 @@
-<header ng-top-bar title="Statistics" with-back="menu"></header>
+<header ng-top-bar title="Statistics" with-back="/"></header>
 <section class='main-container'>
     <div class='statistics-container'>
         <table class='kanji-progression'>
