--- a/app/components/statistics/statisticsView.html
+++ b/app/components/statistics/statisticsView.html
@@ -30,7 +30,7 @@
                     <span ng-if="kanji.meaningVal>=3">Known</span>
                 </td>
             </tr>
-            <tr class='last'><td class='left'></td><td><span ng-if="progression.length==0">No kanji tested yet</span></td><td></td><td class='right'></td></tr>
+            <tr class='last'><td class='left'></td><td></td><td><span ng-if="progression.length==0">No kanji tested yet</span></td><td class='right'></td></tr>
         </table>
     </div>
 </section>
