--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -69,8 +69,8 @@ html, .main-view{
 .square-button{
     display: inline-block;
     width: 250px;
-    height: 250px;
-    line-height: 250px;
+    height: 150px;
+    line-height: 150px;
     border-radius: 5px;
     margin:10px;
     color: white;
@@ -296,6 +296,11 @@ table tr:nth-child(odd){
 }
 
 @media screen and (max-width: 800px) {
+    
+    html, body{
+        width: 100%;
+        height: 100%;
+    }
     
     .menu-container{
         width: 100%;
