--- a/assets/css/exercice.css
+++ b/assets/css/exercice.css
@@ -280,7 +280,7 @@ span.green-text{
     
     .question-container, 
     .results-container{
-        margin-top: 2%;
+        margin-top: 100px;
     }
     
     .input-container,
